<resources>
    <string name="app_name">latest_try_dauvan_app</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_our_app">Welcome to our App!</string>
    <string name="register_now">Register Now</string>
    <string name="already_registered">Already Registered!</string>
    <string name="sign_in">Sign In</string>
    <string name="created_by_eduvos_students">Created by Eduvos students</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_number">Please enter number</string>
    <string name="vat_number">VAT Number</string>
    <string name="please_enter_vat_number">Please enter VAT number</string>
    <string name="email">Email</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password" />
    <string name="please_enter_password">Please enter password</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password_reset">Forgot Password? Reset</string>
    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
    <string name="no_events_on_this_day">No events on this day</string>
    <string name="back_arrow">back arrow</string>
    <string name="welcome_to_your_account">Welcome to your account!</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="please_enter_vat_no">Please enter VAT No</string>
    <string name="edit_account">Edit Account</string>
    <string name="vehicle_repair_service_history">Vehicle Repair/ Service History:</string>
    <string name="transportation_history">Transportation History</string>
    <string name="menu">Menu</string>
    <string name="dauvan_transport_logo">Dauvan Transport Logo</string>
    <string name="welcome_to_dauvan_transport_where_all_your_transport_and_vehicle_problems_are_taken_care_of">Welcome to Dauvan Transport, where all your transport and vehicle problems are taken care of.</string>
    <string name="what_service_do_you_require">What service do you require?</string>
    <string name="transportation">Transportation</string>
    <string name="vehicle_services">Vehicle Services</string>
    <string name="Welcome_dialogue">Welcome to Dauvan Transport, where all your transport and vehicle problems are taken care of.</string>
    <string name="vehicle_service">Vehicle Service</string>
    <string name="transportation_service">Transportation Service</string>
    <string name="menu_image">Menu Image</string>
    <string name="vehicle_servicing">Vehicle Servicing</string>
    <string name="book_vehicle_service">Book Vehicle Service</string>
    <string name="book_major_vehicle_service">Book Major Vehicle Service</string>
    <string name="service_booking">Service Booking</string>
    <string name="service_description_booking">To book a service please provide the following information:</string>
    <string name="service_booking_descriptions">To book a service please provide the following information.</string>
    <string name="make_eg">Make: e.g. BMW</string>
    <string name="model_eg">Model: e.g. X3</string>
    <string name="vin_eg">VIN Number:</string>
    <string name="year_eg">Year: e.g. 2007</string>
    <string name="date_for_service">Date for Service:</string>
    <string name="request_quote">Request Quote</string>
    <string name="date_yyyy_mm_dd">Date: YYYY-MM-DD</string>
    <string name="vehicle_details">Vehicle Details:</string>
    <string name="major_service_booking">Major Service Booking</string>
    <string name="major_service_booking_description">To book a major service please provide the following information.</string>
    <string name="reason_why_for_a_major_service">Reason why for a major service?</string>
    <string name="reason_why_for_a_major_service1">Reason why for a major service:</string>
    <string name="description_of_major_problem">Description of major problem:</string>
    <string name="account_history">Account History</string>
    <string name="account">Account</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="book_transportation">Book Transportation</string>
    <string name="track_my_transportation">Track My Transportation</string>
    <string name="transportation_booking">Transportation Booking</string>
    <string name="Transportation_guide_description">To request transportation for your goods fill in the following information below.</string>
    <string name="goods_being_transported">Goods being Transported:</string>
    <string name="type_of_goods_e_g_metal_pipes">Type of goods: e.g. Metal Pipes</string>
    <string name="specification_of_the_goods">Specification of the goods:</string>
    <string name="weight_kg">Weight: Kg</string>
    <string name="size_h_l_w">Size: H/L/W</string>
    <string name="destination_of_pickup_drop_off"><![CDATA[Destination of pickup & drop off:]]></string>
    <string name="pickup_address">Pickup - Address</string>
    <string name="drop_off_address">Drop off - Address</string>
    <string name="our_contact_information">Our Contact Information</string>
    <string name="dauvan_gmail_com">Dauvan@gmail.com</string>
    <string name="_011_873_9192">011 873 9192</string>
    <string name="where_are_we_located">Where are we located?</string>
    <string name="where_are_we_located1">Where are we located ?</string>
    <string name="dauvan_address"><a href="https://www.google.co.za/maps/place/Dauvan+Transport/@-26.2506838,28.1348469,17z/data=!3m1!4b1!4m6!3m5!1s0x1e9511b2573d592f:0x898acdd3c4af18fb!8m2!3d-26.2506886!4d28.1374218!16s%2Fg%2F11b7rxgfh5?hl=en&amp;entry=ttu&amp;g_ep=EgoyMDI0MTAyNy4wIKXMDSoASAFQAw%3D%3D">5c Union St, Roxton, Alberton, 1401</a></string>
    <string name="business_work_hours_icon">Business work hours icon</string>
    <string name="mon_thur_08_00_to_17_00_fri_08_00_to_15_00_weekends_closed">Mon - Thur = 08:00 to 17:00 Fri = 08:00 to 15:00 Weekends = Closed</string>
    <string name="dauvan_email_icon">Dauvan email icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="location_icon_description">Location Icon Description</string>
    <string name="dauvan_google_image">Dauvan google image</string>
    <string name="status">Status:</string>
    <string name="tracking_transportation">Tracking Transportation</string>
    <string name="discription">Discription</string>
    <string name="delivered">Delivered</string>
    <string name="in_transit">In Transit</string>
    <string name="collected">Collected</string>
    <string name="timestamp">Timestamp:</string>
    <string name="goods">Goods:</string>
    <string name="mark_as_delivered">Mark as Delivered</string>
    <string name="mark_as_in_transit">Mark as In Transit</string>
    <string name="mark_as_collected">Mark as Collected</string>
    <string name="enter_tracking_id">Enter Tracking ID</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="date_for_transportation">Date for transportation:</string>
    <string name="here_is_a_status_of_your_transportation_of_goods">Here is a status of your transportation of goods.</string>
    <string name="hide_show_password">Hide/Show Password</string>
    <string name="hide_show">Hide/show</string>
    <string name="account_profile">Account Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="account_histroy">Account Histroy</string>
    <string name="menu_account">Account</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_notfications">Notfications</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
</resources>