<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/trackingIdInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_tracking_id"
            android:inputType="text"

            android:scrollbarSize="4dp" />

        <Button
            android:id="@+id/collectedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_collected"/>

        <Button
            android:id="@+id/inTransitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_in_transit"/>

        <Button
            android:id="@+id/deliveredButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_delivered" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
