<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditAccountActivity">


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_to_your_account"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <!-- Profile Icon -->
    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile_icon"
        android:src="@drawable/accountsymbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />


    <!-- User's Name -->
    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_s_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileIcon" />


        <!-- Logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="130dp"
            android:layout_height="73dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/plaindauvanlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- First Name text -->
    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel"
        android:layout_marginStart="16dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fnameeditacc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:background="@drawable/text_border_red_outline"
        android:hint="@string/please_enter_your_name"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <!-- Phone Number text -->
    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnameeditacc"
        android:layout_marginStart="16dp"
        tools:ignore="MissingConstraints" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/editphonenum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/please_enter_number"
        android:inputType="phone"
        android:background="@drawable/text_border_red_outline"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text"/>

    <!-- VAT Number text -->
    <TextView
        android:id="@+id/vatNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/vat_number"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editphonenum"
        android:layout_marginStart="16dp"
        tools:ignore="MissingConstraints" />

    <!-- VAT Number Input -->
    <EditText
        android:id="@+id/editvatNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_border_red_outline"
        android:hint="@string/please_enter_vat_number"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vatNumber" />


    <!-- Password text -->
    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editvatNumber"
        android:layout_marginStart="16dp"
        tools:ignore="MissingConstraints" />

    <!--Password Input -->
    <EditText
        android:id="@+id/editpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/please_enter_password"
        android:background="@drawable/text_border_red_outline"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_show"
            app:layout_constraintTop_toBottomOf="@id/editpassword"
            app:buttonTint="@color/red"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            />


        <!-- Edit Account Button -->
        <Button
            android:id="@+id/edit_acc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="Edit Account"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
