<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="-25dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/dauvanlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- First Name text -->
        <TextView
            android:id="@+id/first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginStart="16dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:background="@drawable/text_border_red_outline"
            android:hint="@string/please_enter_your_name"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name_text" />

        <!-- Phone Number text -->
        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_input"
            android:layout_marginStart="16dp"
            tools:ignore="MissingConstraints" />

        <!-- Phone Number Input -->
        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:hint="@string/please_enter_number"
            android:inputType="phone"
            android:background="@drawable/text_border_red_outline"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text"/>

        <!-- VAT Number text -->
        <TextView
            android:id="@+id/vat_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/vat_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_input"
            android:layout_marginStart="16dp"
            tools:ignore="MissingConstraints" />

        <!-- VAT Number Input -->
        <EditText
            android:id="@+id/vat_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_border_red_outline"
            android:hint="@string/please_enter_vat_number"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vat_number_text" />

        <!-- Email text -->
        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vat_number_input"
            android:layout_marginStart="16dp"
            tools:ignore="MissingConstraints" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_border_red_outline"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <!-- Password text -->
        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_input"
            android:layout_marginStart="16dp"
            tools:ignore="MissingConstraints" />

        <!--Password Input -->
        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:hint="@string/please_enter_password"
            android:background="@drawable/text_border_red_outline"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_show"
            app:layout_constraintTop_toBottomOf="@id/register_password_input"
            app:buttonTint="@color/red"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- Register Button -->
        <Button
            android:id="@+id/register_btn_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/register_now"
            android:onClick="register"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox" />

        <TextView
            android:id ="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_btn_screen"/>


        <!-- Have account text -->
        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account_sign_in"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/register_btn_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
